[project]
name = "ewnix"
version = "0.1"
description = "ewnix lab project"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]

# Homepage = "https://"
# Documentation = "https://"
# Repository = "https://"
# Homepage = "https://"

authors = [
    {name = "Aidan Campbell", email = "acampbell9735@stevenscollege.edu"},
]

dependencies = [
    "IPython",
    "click",
    "paho-mqtt",
    "uuid-utils",
    "requests",
]
[project.scripts]
rwc = "ewnix.rwc:command"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ewnix"]
